# cosmos-transfer2.5

./: .coveragerc  .gitignore  .pre-commit-config-base.yaml  .pre-commit-config.yaml  .pytest.ini  ATTRIBUTIONS.md  CONTRIBUTING.md  Dockerfile  README.md  conftest.py  justfile  pyproject.toml  pyrefly-src.toml  pyrefly.toml  ruff.toml
assets/: depth.jsonl  edge.jsonl  image.jsonl  multicontrol.jsonl  seg.jsonl  vis.jsonl
assets/car_example/: car_prompt.json  car_prompt.txt
assets/car_example/depth/: car_depth_spec.json
assets/car_example/edge/: car_edge_spec.json
assets/car_example/multicontrol/: car_multicontrol_spec.json
assets/car_example/seg/: car_seg_spec.json
assets/car_example/vis/: car_vis_spec.json
assets/image_example/: image2image.json  image_style.json
assets/multiview_example/: multiview_autoregressive_spec.json  multiview_spec.json  prompt.txt
assets/multiview_hdmap_posttrain_dataset/captions/ftheta_camera_front_wide_120fov/: av_08a1a9fd-1fd5-4b12-ac74-9990b2b51dfe_0.json  av_0aef6f94-b02a-4c29-b99f-06fcd48ac0a0_0.json
assets/outputs/pytest/test_level_0_auto_multiview_0/: config.yaml
assets/outputs/pytest/test_level_0_depth_0/: robot_depth.json
assets/outputs/pytest/test_level_0_edge_0/: robot_edge.json
assets/outputs/pytest/test_level_0_post_training_aut0/: config.yaml
assets/outputs/pytest/test_level_0_seg_0/: config.yaml  robot_seg.json
assets/outputs/pytest/test_level_0_vis_0/: config.yaml
assets/outputs/pytest/test_level_1_depth_0/: car_depth.json  car_spatiotemporal_mask_prompt.json  robot_depth.json
assets/outputs/pytest/test_level_1_edge_0/: robot_edge.json
assets/outputs/pytest/test_level_1_seg_0/: car_seg_on_the_fly.json
assets/outputs/pytest/test_level_1_vanilla_multicont0/: car_multicontrol.json
assets/outputs/pytest/test_level_1_vis_0/: car_vis.json  config.yaml  robot_vis.json
assets/pytest/test_level_0_auto_multiview_0/: auto_multiview.json
assets/pytest/test_level_0_depth_0/: config.yaml  robot_depth.txt
assets/pytest/test_level_0_edge_0/: config.yaml
assets/pytest/test_level_0_vanilla_multicont0/: config.yaml  robot_multicontrol.json
assets/pytest/test_level_0_vis_0/: robot_vis.json
assets/pytest/test_level_1_auto_multiview_0/: config.yaml
assets/pytest/test_level_1_depth_0/: car_depth_on_the_fly.json  car_spatiotemporal_mask_prompt.txt  config.yaml
assets/pytest/test_level_1_edge_0/: car_edge.json  config.yaml
assets/pytest/test_level_1_post_training_aut0/: auto_multiview.json  config.yaml
assets/pytest/test_level_1_seg_0/: car_seg.json  config.yaml  robot_seg.json
assets/pytest/test_level_1_vanilla_multicont0/: config.yaml  robot_multicontrol.json
assets/robot_example/: robot_prompt.json  robot_prompt.txt
assets/robot_example/depth/: robot_depth_spec.json
assets/robot_example/edge/: robot_edge_spec.json
assets/robot_example/multicontrol/: robot_multicontrol_spec.json
assets/robot_example/seg/: robot_seg_spec.json
assets/robot_example/vis/: robot_vis_spec.json
assets/singleview_posttrain_dataset_VideoUFO_subsample/: README.md
assets/singleview_posttrain_dataset_VideoUFO_subsample/captions/: 4J3J5jJ8fLY.6.json  5v4D0Pfw8NY.15.json  7gsZ0ni1cY4.4.json  9uiPeKivAmI.2.json  D1-GqIVzC-U.2.json  EOIFGXKwRuA.13.json  SI8-qkqipVI.2.json  vR_Prd_UX8o.1.json
cosmos_transfer2/: __about__.py  config.py  control2world.py  inference.py  init.py  multiview.py  multiview2world.py  multiview_config.py  singleview_config.py
cosmos_transfer2/_src/common/configs/: lr_scheduler.py
cosmos_transfer2/_src/common/functional/: multi_step.py  runge_kutta.py
cosmos_transfer2/_src/common/models/: abstract_emb_model.py
cosmos_transfer2/_src/imaginaire/: config.py  flags.py  model.py  serialization.py  trainer.py
cosmos_transfer2/_src/predict2/: conditioner.py  context_parallel_test.py
cosmos_transfer2/_src/predict2_multiview/: conditioner.py
cosmos_transfer2/experiments/multiview/: cosmos_multiview_example.py
cosmos_transfer2/experiments/singleview/: cosmos_singleview_example.py
cosmos_transfer2/gradio/: control2world_worker.py  gradio_bootstrapper.py  model_config.py  multiview_worker.py  sample_data.py
docker/: nightly-requirements.txt  nightly.Dockerfile
docs/: inference.md  inference_auto_multiview.md  inference_image.md  post-training.md  post-training_auto_multiview.md  post-training_singleview.md  setup.md  troubleshooting.md  world_scenario_parquet.md  world_scenario_video_generation.md
examples/: inference.py  multiview.py
gradio_app/: gradio_bootstrapper.py  model_config.py
scripts/: check_environment.py  convert_distcp_to_pt.py  distcp_to_pt.py  generate_control_videos.py  get_t5_embeddings.py  get_t5_embeddings_from_cosmos_nemo_assets.py  get_t5_embeddings_from_groot_dataset.py  prepare_agibot_fisheye_data.py  prepare_videoufo_dataset.py  render_hd_map.py  run_gradio.sh  test_environment.py  train.py
scripts/av_utils/: __init__.py  bbox_utils.py  clip_gt_io.py  data_model.py  graphics_utils.py  laneline_utils.py  minimap_utils.py  pcd_utils.py  render_config.py  shader_utils.py  traffic_light_utils.py
scripts/av_utils/camera/: __init__.py  base.py  ftheta.py
scripts/av_utils/color_configs/: config_color_bbox.json  config_color_hdmap.json  config_color_laneline.json  config_color_traffic_light.json  config_type_hdmap.json
tests/: assets_test.py  docs_test.py  test_assets.py  test_worker.py
tests/docs_test/: auto_multiview.sh  auto_multiview_autoregressive.sh  depth.sh  depth_parallel_tokenizer.sh  depth_tokenizer_compile.sh  edge.sh  image.sh  post-training_auto_multiview.sh  post-training_singleview.sh  seg.sh  vanilla.sh  vanilla_multicontrol.sh  vis.sh
tests/examples/: depth.sh  depth_parallel_tokenizer.sh  depth_tokenizer_compile.sh  edge.sh  image.sh  multicontrol.sh  multiview.sh  multiview_auto_regressive.sh  seg.sh  vis.sh
tests/gradio/: control2world.sh  control2world_worker.sh  multiview.sh  multiview_worker.sh  test_server.py  test_worker.py
tests/vqa_questions/examples/: car_seg.yaml  multiview.yaml  robot_edge.yaml  robot_vis.yaml
(+517 files in other folders)
